k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scipion-master
  namespace: handl-ns
spec:
  selector:
    matchLabels:
      app: scipion-master
  replicas: 1
  template:
    metadata:
      labels:
        app: scipion-master
    spec:
      containers:
# Conatiner that removes old tool containers
#      - name: garbage-collector
#        image: jhandl/scipion-gc:latest
#        imagePullPolicy: Always
#        securityContext:
#          privileged: false
#          runAsUser: 1000
#          runAsGroup: 1000
      - name: scipion-master
        image: jhandl/scipion-mn:tool
        imagePullPolicy: Always
        ports:
        - containerPort: 5901
        - containerPort: 6001
        volumeMounts:
#        - name: x-socket
#          mountPath: /tmp/.X11-unix
        - name: scipion-user-data
#          mountPath: /home/scipionuser/ScipionUserData
          mountPath: "/mnt/onedata"
#        - mountPath: "/home/scipionuser/ScipionUserData"
#          name: scipion-user-data
        - name: scipion-projects
          mountPath: "/mnt/projects"
        resources:
          limits:
            memory: 10Gi
            cpu: 10
#            nvidia.com/gpu: 1 # dedicated GPU
            cerit.io/gpu-mem: 1 # shared GPU
        securityContext:
          privileged: false
          runAsUser: 1000
          runAsGroup: 1000
      serviceAccountName: pod-reader-sa
      volumes:
#      - name: x-socket
#        hostPath:
#          path: /tmp/.X11-unix/X0
#      - name: scipion-user-data
#        hostPath:
#          path: /home/jhandl/k8s-volume
##        emptyDir: {}

#       - name: x-socket
#         emptyDir:
#           medium: memory
#           sizeLimit: 10Mi
       - name: scipion-user-data
         persistentVolumeClaim:
           claimName: pvc-sec-scipion-onedata
#           claimName: pvc-onedata
       - name: scipion-projects
         persistentVolumeClaim:
           claimName: scipion-test-volume
#       - name: x-socket
#         persistentVolumeClaim:
#           claimName: scipion-test-volume-x
