k8s/cluster-ip-x11.yaml
apiVersion: v1
kind: Service
metadata:
  name: scipion-master-svc-x11
  namespace: "$SUBST_NAMESPACE"
spec:
  type: ClusterIP
  ports:
  - name: scipion-master-port                                                 
    port: 6001
    targetPort: 6001
  selector:
    app: scipion-master
