k8s/ingress.yaml
apiVersion: networking.k8s.io/v1                                                
kind: Ingress                                                                   
metadata:                                                                       
  name: scipion-master-ingress
  namespace: handl-ns
  annotations:                                                                  
    kuberentes.io/ingress.class: "nginx"                                        
    kubernetes.io/tls-acme: "true"                                              
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/target: k8s-public-u.cerit-sc.cz
spec:                                                                           
  tls:                                                                          
    - hosts:                                                                    
        - "scipion.dyn.cerit-sc.cz"                                              
      secretName: scipion-dyn-cerit-sc-cz-tls                                    
  rules:                                                                        
  - host: "scipion.dyn.cerit-sc.cz"                                          
    http:                                                                       
      paths:                                                                    
      - backend:                                                                
          service:                                                              
            name: scipion-master-svc                                          
            port:                                                               
              number: 5906                                                      
        pathType: ImplementationSpecific
